Styling and spacing fixes.

--- a/jTerminal/examples/dialog.css
+++ b/jTerminal/examples/dialog.css
@@ -14,14 +14,49 @@
   -o-background-size: cover;
   background-size: cover;
 }
+
+@media screen and (max-width: 1480px) {
+  #bashet-sprite {
+    display:none;
+  }
+}
+.wrapper{
+  margin-left:auto;
+  margin-right:auto;
+}
+.container {
+  display: grid;
+  grid-template-columns: 680px 200px;
+  grid-template-rows: 400px 200px 300px;
+  position:absolute;
+  top:55%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+
+}
+.item-a {
+  grid-column: 1 / 3;
+  grid-row: 1;
+    }
+.item-b {
+  grid-column: 1;
+  grid-row: 2;
+}
+.item-c{
+  grid-column: 2;
+  grid-row: 2;
+}
+
 #charsprite{
   background:black;
   border-color:#AAAAAA;
   border-width:thick;
   border-style:solid;
-  left:63.9%;
-  top:66.8%;
-  position:absolute;
+  max-height:200px;
+  min-height:200px;
+  min-width:200px;
+  max-width:200px;
+  margin-top:26.4px;
 }
  #fileInput{
    left: 46%;
@@ -29,48 +64,41 @@
    top:10%;
    position:absolute;
  }
-#title-bashet{
-  /* text-shadow: 2px 2px 5px black; */
-}
  #bashet-sprite{
    position:absolute;
    top:0;
    left:27%;
-   width:8%;
-   height:auto;
-   /* box-shadow: 10px 10px 5px grey; */
+   max-height:112px;
+   max-width:112px;
+   min-height:112px;
+   min-width:112px;
  }
 
  #demo{
-   position:absolute;
    background-color: #000;
-   width:47.55%;
-   height:30%;
-   left:25.55%;
    border-style:solid;
    color:#fff;
    border-color: #AAAAAA;
    border-width:thick;
-   padding: 5px 5px 10px 10px;
-   /* box-shadow: 10px 10px 5px grey; */
+   max-height:400px;
+   min-height:400px;
+   max-width:880px;
+   min-width:880px;
  }
  #storyteller{
-   position:absolute;
    background-color: #000;
-   width:37.5%;
-   height:15.3%;
-   left:25.55%;
-   top:65.2%;
    border-style:solid;
    color:cyan;
    border-color: #AAAAAA;
    border-width:thick;
-   padding: 5px 5px 10px 10px;
-   /* box-shadow: 10px 10px 5px grey; */
+   max-height:200px;
+   min-height: 200px;
+   max-width:680px;
+   min-width:680px;
  }
 .dialog {
     /* background-color: #00a; */
-    position: relatieve;
+    /* position: relative; */
     font-size: 12px;
     line-height: 14px;
     margin: 0;
@@ -87,6 +115,9 @@
     --color: #000;
     --background: #aaa;
     padding: 0;
+    /* left:25%;
+    top:50%; */
+    /* position:relative; */
 }
 .dialog .cmd > span:not(.prompt) {
     float: none;
@@ -102,7 +133,7 @@
     float: left;
     position: absolute;
 
-    bottom:21%;
+    bottom:-10%;
     left: 50%;
     /* box-shadow: 10px 10px 5px grey; */
 
